@@ -1,3 +1,8 @@
+2001-07-03  Tambet Ingo  <tambet@ximian.com>
+
+	* x.pl.in (general_parse_section): Split lines with
+	Text::ParseWords (right way).
+
 2001-07-02  Tambet Ingo  <tambet@ximian.com>
 
 	* display-conf.in (xml_parse): Removed extra 'shift'.
